fix overflow modal

--- a/src/sass/modal/_modal.scss
+++ b/src/sass/modal/_modal.scss
@@ -119,7 +119,7 @@
   width: 100%;
   max-height: 180px;
   scroll-behavior: smooth;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .modal-button {
